<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.ActivityForm">

        <TextView
            android:id="@+id/main_title_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:text="Créer une nouvelle réunion"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/title_field_0"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:text="Rentrer le sujet de la réunion"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/main_title_form">

        </TextView>

        <EditText
            android:id="@+id/fields_0_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLength="14"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="ex : Tomates"
            app:layout_constraintTop_toBottomOf="@+id/title_field_0">

        </EditText>

        <TextView
            android:id="@+id/title_field_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:text="Rentrer l'heure de réunion"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fields_0_form">

        </TextView>


        <TextView
            android:id="@+id/fields_1_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="HH h mm"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/title_field_1">

        </TextView>

        <TextView
            android:id="@+id/title_field_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:text="Choisir la salle de réunion"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/fields_1_form">

        </TextView>



        <Spinner
            android:id="@+id/Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/title_field_2"></Spinner>

        <TextView
            android:id="@+id/title_field_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:text="Rentrer l'email des participants"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/Spinner"></TextView>

        <EditText
            android:id="@+id/fields_2_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="115dp"
            android:hint="Rentrez l'email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/title_field_3"></EditText>

        <Button
            android:id="@+id/email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonClick"
            android:text="Ajouter"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/chip_group"
            app:layout_constraintLeft_toRightOf="@+id/fields_2_form"
            app:layout_constraintTop_toBottomOf="@+id/title_field_3">

        </Button>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/fields_2_form">

        </com.google.android.material.chip.ChipGroup>


        <Button
            android:id="@+id/validate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@color/colorPrimary"
            android:text="Valider"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/chip_group">

        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

